# Playground

./: .gitignore
cpp/boost/asio/: CMakeLists.txt
cpp/boost/asio/coroutine/: CMakeLists.txt  basic_coro.cpp  basic_coro.py
cpp/boost/asio/date_timer/: CMakeLists.txt  async_tcp_server.cpp  combined_server.cpp  sync_tcp_client.cpp  sync_tcp_server.cpp  sync_udp_client.cpp  sync_udp_server.cpp
cpp/boost/asio/timer/: CMakeLists.txt  async_timer.cpp  strand.cpp  sync_timer.cpp
cpp/data_structure/list/: CMakeLists.txt  forward_list.hpp  list_node.hpp  main.cpp
cpp/ipc/: CMakeLists.txt  README.md  utils.hpp
cpp/ipc/asio_local_socket/: CMakeLists.txt  client.cpp  server.cpp
cpp/ipc/asio_tcp_socket/: CMakeLists.txt  client.cpp  server.cpp
cpp/ipc/fifo/: CMakeLists.txt  client.cpp  server.cpp
cpp/ipc/local_socket/: CMakeLists.txt  client.cpp  server.cpp
cpp/ipc/message_queue/: CMakeLists.txt  client.cpp  server.cpp
cpp/ipc/pipe/: pipe.cpp
cpp/ipc/semaphore_arrays/: CMakeLists.txt  client.cpp  sem.hpp  server.cpp
cpp/ipc/share_memory/: CMakeLists.txt  client.cpp  server.cpp
cpp/ipc/tcp_socket/: CMakeLists.txt  client.cpp  server.cpp
cpp/socket/: CMakeLists.txt
cpp/socket/asio_echo/: CMakeLists.txt  client.cpp  co_server.cpp  server.cpp  test_client.cpp  test_server.cpp
cpp/socket/basic_echo/: CMakeLists.txt  client.cpp  server.cpp
cpp/struct/: CMakeLists.txt  entry.cpp  struct_test
cpp/thread/: CMakeLists.txt
cpp/thread/condition_variable/: CMakeLists.txt  cv.cpp
cpp/thread/future/: CMakeLists.txt  async.cpp  future.cpp  package_task.cpp
cpp/thread/mutex/: CMakeLists.txt  mutex.cpp
cpp/thread/thread_pool/: CMakeLists.txt  main.cpp  safe_queue.hpp  thread_pool.hpp
python3/modules/struct/: struct_test.py
python3/networking/socket/: client.py  server.py
python3/networking/socket/tcp/: echo_client.py  echo_server.py
python3/networking/socket/udp/: echo_client.py  echo_server.py
python3/processes/ipc/: utils.py
python3/processes/ipc/local_socket/: local_socket_client.py  local_socket_server.py
python3/processes/ipc/pipe/: pipe.py
python3/processes/ipc/queue/: server.py
python3/processes/ipc/shared_memory/: client.py  server.py
